@@ -1,5 +1,10 @@
 
 
+Changes:
+- automatically skip building testcases if C++ compiler not available
+  (reminder: libHX itself does not require a C++ compiler)
+
+
 libHX 2.9 (July 11 2009)
 ========================
 Fixes:
